--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.0",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
+    "html-react-parser": "^1.4.0",
+    "interweave": "^12.8.0",
+    "next": "^11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-chartjs-2": "^3.0.5",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "stars-rating": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
